[package]
name = "adw-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# adw = { version = "0.1.1", package = "libadwaita", features = ["gtk_v4_6"] }
adw = { version = "0.2.0", git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git", package = "libadwaita", features = ["gtk_v4_6"] }