[package]
name = "adw-test"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.3.0", package = "libadwaita", features = ["gtk_v4_6"] }
# adw = { version = "0.4.0", git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs.git", package = "libadwaita", features = ["gtk_v4_6", "v1_2"] }